# awake-on-lan

./: .gitignore  Cargo.toml  Makefile  README.md  awakeonlan.spec  co.logonoff.awakeonlan.json  co.logonoff.awakeonlan.yml  co.logonoff.summon.json  meson.build
.github/workflows/: release.yml
Formula/: awakeonlan.rb
_packaging/: runtime_hook.py
bucket/: awakeonlan.json
data/: co.logonoff.awakeonlan.desktop.in  co.logonoff.awakeonlan.gschema.xml  co.logonoff.awakeonlan.metainfo.xml.in  co.logonoff.summon.desktop.in  co.logonoff.summon.gschema.xml  co.logonoff.summon.metainfo.xml.in  meson.build  summon.gresource.xml.in
data/icons/: meson.build
data/metainfo/: co.logonoff.summon.metainfo.xml.in  meson.build
po/: POTFILES  awakeonlan.pot  en.po  it.po  meson.build
src/: add_dialog.glade  add_dialog.py  add_dialog.ui  application.rs  awakeonlan.gresource.xml  awakeonlan.in  config.rs  main.c  main.py  main.rs  meson.build  settings_manager.py  summon-application.c  summon-application.h  summon-window.c  summon-window.h  summon-window.ui  summon.gresource.xml  summon.in  window.py  window.rs  window.ui  wol_client.py
